// Grasscutter - A server software reimplementation for a certain anime game.
// Copyright (C) 2022  Grasscutter Team
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published
// by the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 8673
// EnetChannelId: 0
// EnetIsReliable: true
message MusicGameSettleRsp {
	int32 retcode = 11;
	uint32 music_basic_id = 5;
	bool is_new_record = 6;
	bool is_unlock_next_level = 2;
	uint64 Unk2700_CEPGMKAHHCD = 10;
}
