syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 8101
// EnetChannelId: 0
// EnetIsReliable: true
message MusicGameStartRsp {
	int32 retcode = 5;
	uint32 music_basic_id = 14;
	uint64 music_share_id = 12;
}
